resolves alignment issues

--- a/styles/comprehensive/master.css
+++ b/styles/comprehensive/master.css
@@ -1289,13 +1289,30 @@ span::selection {
 }
 
 .main {
+  align-items: center;
   display: flex;
   flex-direction: column;
   height: 100%;
-  justify-content: space-between;
+  justify-content: center;
   position: relative;
   width: 100%;
   z-index: 1;
+}
+
+.section {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+@media only screen and (min-width: 640px) {
+  .section {
+    max-width: 91rem;
+  }
 }
 
 .h2-tag-line {
@@ -1356,7 +1373,7 @@ span::selection {
   }
 }
 .footer {
-  align-items: flex-start;
+  align-items: center;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -1417,6 +1434,11 @@ span::selection {
   flex-direction: column;
   gap: 1rem;
   width: 100%;
+}
+@media only screen and (min-width: 640px) {
+  .footer-disclaimers {
+    max-width: 91rem;
+  }
 }
 .footer-disclaimers .p {
   margin: 0;
